# hslogger-template

./: README.md  Setup.hs  Setup.lhs  hslogger-template.cabal  stack.yaml
src/: test.hs  testNamed.hs
src/System/Log/: TH.hs
src/System/Log/Logger/: TH.hs
